Fix alignment in footer

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -8,4 +8,5 @@ footer{
 	text-align:center;
 	align-items:center;
 	justify-content:center;
+	line-height:30px;
 }
